# mms

./: .gitignore  CMakeLists.txt  README.md
include/mms/: mms.h
src/: CMakeLists.txt  bookmark.cpp  file.cpp  istream.cpp  postrack.cpp  source.cpp  streambuf.cpp
tests/: CMakeLists.txt  main.cpp  test-bookmark.cpp  test-file.cpp  test-istream.cpp  test-mms.cpp  test-postrack.cpp  test-source.cpp  test-streambuf.cpp
